[package]
name = "jump"
description = "A simple CLI tool to save shortcut name and jump to directories"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

authors = ["Chetan Baliyan <chetanbaliyan10@gmail.com>"]
homepage = "https://github.com/chetanXpro/jump"
repository = "https://github.com/ChetanXpro/jump"
readme = "README.md"

keywords = ["coreutils", "cd", "files", "filesystem","jump"]
categories =["command-line-utilities"]
license = "GPL-3.0-only"

[dependencies]

clap = { version = "4.4.12", features = ["derive"] }
argh = "0.1.12"
directories = "5.0.1"
serde = "1.0"
serde_json = "1.0.117"

