[package]
name = "jumb"
description = "A lightning-fast CLI tool for directory navigation. Create custom shortcuts to instantly jump between frequently used paths, eliminating the need for lengthy cd commands."
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

authors = ["Chetan Baliyan <chetanbaliyan10@gmail.com>"]
homepage = "https://github.com/chetanXpro/jump"
repository = "https://github.com/ChetanXpro/jump"
readme = "README.md"

keywords = ["coreutils", "cd", "files", "filesystem","jump"]
categories =["command-line-utilities"]
license = "MIT"

[dependencies]

clap = { version = "4.4.12", features = ["derive"] }
argh = "0.1.12"
directories = "5.0.1"
serde = "1.0"
serde_json = "1.0.117"

